--- a/emergence_ui.ui
+++ b/emergence_ui.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Emergence Test</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -234,10 +234,10 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>280</x>
       <y>40</y>
-      <width>51</width>
-      <height>17</height>
+      <width>61</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -249,7 +249,7 @@
      <rect>
       <x>390</x>
       <y>40</y>
-      <width>67</width>
+      <width>81</width>
       <height>17</height>
      </rect>
     </property>
@@ -260,9 +260,9 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>320</x>
       <y>20</y>
-      <width>71</width>
+      <width>81</width>
       <height>17</height>
      </rect>
     </property>
@@ -276,7 +276,7 @@
     <rect>
      <x>510</x>
      <y>30</y>
-     <width>211</width>
+     <width>261</width>
      <height>80</height>
     </rect>
    </property>
@@ -323,12 +323,41 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>101</width>
+      <width>131</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Automatic</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="step_pushButton">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>121</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Step</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="return_pushButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>50</y>
+      <width>41</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&gt;&gt;</string>
     </property>
    </widget>
   </widget>
@@ -2856,7 +2885,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>40</x>
      <y>130</y>
-     <width>161</width>
+     <width>191</width>
      <height>25</height>
     </rect>
    </property>
