--- a/emergence_ui.ui
+++ b/emergence_ui.ui
@@ -213,9 +213,6 @@
     </property>
    </widget>
    <widget class="QSlider" name="grid_slider">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
     <property name="geometry">
      <rect>
       <x>350</x>
@@ -227,6 +224,9 @@
     <property name="maximum">
      <number>1</number>
     </property>
+    <property name="value">
+     <number>1</number>
+    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
@@ -234,10 +234,10 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>390</x>
       <y>40</y>
       <width>61</width>
-      <height>16</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -247,20 +247,20 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>390</x>
+      <x>310</x>
       <y>40</y>
-      <width>81</width>
-      <height>17</height>
+      <width>41</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Diagonal</string>
+     <string>Hex</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>330</x>
       <y>20</y>
       <width>81</width>
       <height>17</height>
@@ -361,7 +361,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QFrame" name="frame">
+  <widget class="QFrame" name="plot_frame">
    <property name="enabled">
     <bool>false</bool>
    </property>
