--- a/emergence_ui_test.ui
+++ b/emergence_ui_test.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../../../../.designer/backup/favicon.png</normaloff>../../../../.designer/backup/favicon.png</iconset>
+    <normaloff>../../../../../../.designer/backup/favicon.png</normaloff>../../../../../../.designer/backup/favicon.png</iconset>
   </property>
   <widget class="QFrame" name="setup_frame">
    <property name="geometry">
@@ -347,7 +347,7 @@
   <widget class="QPushButton" name="randomOnOff_pushButton">
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>470</x>
      <y>130</y>
      <width>191</width>
      <height>25</height>
@@ -363,7 +363,7 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>710</x>
      <y>130</y>
      <width>191</width>
      <height>25</height>
@@ -492,6 +492,41 @@
      <string>Environment</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QSpinBox" name="percentOff_spinBox">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>129</y>
+     <width>52</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="minimum">
+    <number>10</number>
+   </property>
+   <property name="maximum">
+    <number>90</number>
+   </property>
+   <property name="singleStep">
+    <number>10</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_11">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>130</y>
+     <width>141</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Percentage Off:</string>
+   </property>
   </widget>
  </widget>
  <resources/>
